--- a/style.css
+++ b/style.css
@@ -29,116 +29,7 @@ h1 {
     padding: 20px; 
     color: #0d2226;
 }
-
-  /* @media screen and (max-width: 820px) {
-   
-  } */
   
-
-.dropdown {
-  translate: 0 -20px;
-  position: relative;
-  cursor: pointer;
-}
-
-.dropdown > button {
-  width: 170px;
-  height: 60px;
-  border: 0;
-  border-radius: 6px;
-  font-family: inherit;
-  font-size: 17px;
-  background:transparent;
-}
-
-.dropdown > .content {
-  position: absolute;
-  z-index: 2;
-  top: 20px;
-  left: 0;
-  width: 100%;
-  height: 60px;
-  padding: 0 16px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 10px;
-  color: #ffffff;
-}
-
-.dropdown > .content::after {
-  content: "";
-  position: absolute;
-  bottom: 6px;
-  right: 10%;
-  width: 80%;
-  height: 1px;
-  transform: scaleX(0);
-  background: rgba(0, 0, 0, 0.3);
-  transition: 0.3s;
-}
-
-.dropdown:hover > .content::after {
-  transform: scaleX(1);
-}
-
-.dropdown > .content > span:first-child {
-  font-size: 20px;
-}
-
-.dropdown > .content > span:last-child {
-  margin-left: auto;
-}
-  
-.dropdown > .content > span:last-child {
-  transition: 0.3s;
-}
-
-.dropdown:hover > .content > span:last-child {
-  rotate: -180deg;
-}
-
-.dropdown > .menu {
-  position: absolute;
-  z-index: 1;
-  top:6px;
-  left: 50%;
-  display: grid;
-  width: 100%;
-  padding: 70px 0 6px;
-  border-radius: 6px;
-  translate: -50% 0;
-  visibility: hidden;
-  opacity: 0;
-  scale: 0.85;
-  background:#ffffff;
-  /* background: linear-gradient(#ea8d8d, #a890fe); */
-  transition: 0.3s;
-}
-
-.dropdown:hover > .menu {
-  visibility: visible;
-  opacity: 1;
-  scale: 1;
-}
-
-.dropdown > .menu > a {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  color: #000000;
-  font-size: 14px;
-  padding: 0 24px;
-}
-
-.dropdown > .menu > a:hover {
-  background: rgba(255, 255, 255, 0.1);
-}
-
-.dropdown > .menu > a > span {
-  font-size: 20px;
-}
-
 aside {
   display: flex;
   flex-direction: row;
@@ -146,5 +37,19 @@ aside {
   box-sizing: border-box;
   margin: 50px;
   padding: 20px;
+  gap: 150px;
   box-sizing: border-box; 
+}
+
+aside img {
+  width: 100px;
+  height: 100px;
+}
+
+aside img:hover {
+  transform: scale(1.1);
+}
+
+aside div:hover {
+  transform: scale(1.1);
 }
