--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     font-weight: 400;
     font-family: monospace;
     margin: 0 0;
-    color: #1d1d1d;
+    color: #ffffff;
     background: linear-gradient(to right, #010e1f, #010e1f);
     background-size: cover;
     background-size: cover;
