--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -6,7 +5,7 @@
 }
 
 main {
-  margin: 10px 0px;
+  margin: 10px 0;
 }
 
 #img {
@@ -16,44 +15,43 @@ main {
 }
 
 body {
-    font-size: 13px;
-    font-weight: 400;
-    font-family: monospace;
-    margin: 0 0;
-    color: #ffffff;
-    background: linear-gradient(to right, #010e1f, #010e1f);
-    background-size: cover;
-    background-size: cover;
+  font-size: 13px;
+  font-weight: 400;
+  font-family: monospace;
+  margin: 0;
+  color: #ffffff;
+  background: linear-gradient(to right, #010e1f, #010e1f);
+  background-size: cover;
+  background-size: cover;
 }
 
 h1 {
-    font-family: monospace;
-    width: 50%;
-    margin: 10px 400px;
-    text-align: center;
-    border-top:5px solid #ffffff;
-    background: linear-gradient(to left, #f18324, #f18324);
-    background-size: cover; 
-    background-position: center;
-    background-repeat: no-repeat; 
-    padding: 20px; 
-    color: #0d2226;
+  font-family: monospace;
+  width: 50%;
+  margin: 10px 400px;
+  text-align: center;
+  border-top: 5px solid #ffffff;
+  background: linear-gradient(to left, #f18324, #f18324);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 20px;
+  color: #0d2226;
 }
 
 h2 {
-    text-align: center;
-    color: #d2d0e6;
-    margin: 25px 25px;
-    opacity: 0.7;
-    font-size: 20px;
-    font-weight: 600;
-} 
+  text-align: center;
+  color: #d2d0e6;
+  margin: 25px 25px;
+  opacity: 0.7;
+  font-size: 20px;
+  font-weight: 600;
+}
 
 h3 {
   color: #f18324;
 }
 
-  
 aside {
   display: flex;
   width: 100%;
@@ -61,20 +59,20 @@ aside {
   margin: 20px;
   padding: 20px;
   gap: 150px;
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 aside h1 {
-    font-family: monospace;
-    margin: 0px 0px;
-    text-align: left;
-    border: none;
-    background: transparent;
-    background-size: cover; 
-    background-position: center;
-    background-repeat: no-repeat; 
-    padding: 20px; 
-    color: #ffffff;
+  font-family: monospace;
+  margin: 0px 0px;
+  text-align: left;
+  border: none;
+  background: transparent;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 20px;
+  color: #ffffff;
 }
 
 aside h2 {
@@ -108,61 +106,49 @@ aside a {
 }
 
 footer {
-    color: white;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin-bottom: 0px;
-    margin-top: 0px;
-  }
-  
-  
-  .footer-top-wrapper {
-    font-size: 10px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 48px;
-    margin: 0 auto;
-    padding: 16px;
-    min-height: 160px;
+  color: white;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+.footer-top-wrapper {
+  font-size: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 48px;
+  margin: 0 auto;
+  padding: 16px;
+  min-height: 160px;
 }
 
 .footer-top-wrapper > section {
-    width: 100%;
+  width: 100%;
 }
 
 footer h2 {
-    text-align: center;
-    color: #d2d0e6;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    opacity: 0.7;
-    font-size: 10px;
-    font-weight: 600;
+  text-align: center;
+  color: #d2d0e6;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  opacity: 0.7;
+  font-size: 10px;
+  font-weight: 600;
 }
 
 menu {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 menu li {
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
-
-
-/* .social-links {
-    gap: 8px;
-    width: 180px;
-}
-
-.social-links img {
-    width: 24px;
-    height: 24px;
-} */
 
 nav {
   font-family: monospace;
@@ -176,7 +162,7 @@ nav {
 }
 
 nav ul {
-  list-style-type:none ;
+  list-style-type: none;
   margin-left: 10px;
   padding: 1px;
 }
@@ -197,77 +183,64 @@ nav li span {
 
 nav li a:hover {
   text-decoration: none;
-  color:#f18324;
+  color: #f18324;
 }
 
 @media screen and (max-width: 820px) {
-
   h1 {
-    width: 100%;
-    margin: 0 0;
+      width: 100%;
+      margin: 0 0;
   }
   aside {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    flex-direction: column;
-    width: 100%;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      flex-direction: column;
+      width: 100%;
   }
   #img {
-  width: 100%;
-  height: auto;
-  margin: 10px 0px;
+      width: 100%;
+      height: auto;
+      margin: 10px 0;
+  }
 }
-}
-
 .photo-grid {
   display: grid;
-  grid-template-columns: repeat(6,1fr); /* Três colunas igualmente espaçadas */
-  gap: 50px; /* Espaçamento entre as fotos */
-  max-width: 95%; /* Largura máxima da grade */
-  margin: 0 auto; /* Centraliza a grade horizontalmente */
-  padding: 1px; /* Espaçamento ao redor da grade */
+  grid-template-columns: repeat(1, 1fr); /* Single column for smaller screens */
+  gap: 10px; /* Adjust spacing as needed for smaller screens */
+  max-width: 95%;
+  margin: 0 auto;
+  padding: 1px;
   font-family: monospace;
 }
-
-/* Estilos para as imagens dentro da grade */
 .photo-grid img {
-  width: 100%; /* Ajusta a largura da imagem para ocupar o espaço da coluna */
-  height: auto; /* Mantém a proporção original da imagem */
-  border-radius: 10px; /* Bordas arredondadas */
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
   box-shadow: 0 5px 12px rgba(0, 0, 0, 0.5);
 }
-
-
 .photo-grid div {
   box-sizing: border-box;
   margin: 0 0;
-  /* border: 1px solid #f3eeee; */
   border-radius: 5px;
   padding: 5px 0px;
-  box-sizing: border-box; 
+  box-sizing: border-box;
   transition: background-image 0.3s ease-in-out;
   box-shadow: 0 5px 12px rgba(0, 0, 0, 0.5);
- 
 }
-
 .photo-grid span {
   font-size: medium;
   font-weight: 300;
 }
-
-
 .photo-grid button {
   background-color: #ff0606;
   border: none;
-  color:#ffffff;
+  color: #ffffff;
   text-align: left;
   font-weight: 700;
   cursor: pointer;
   padding: 0px;
-
 }
-
 .photo-grid button:hover {
-  
+  /* Add styles for button hover state */
 }
