--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -46,45 +46,52 @@
     }
 }
 
-/* Estilos para dispositivos móveis */
+/* Estilos para dispositivos móveis (idênticos aos estilos de desktop) */
 @media (max-width: 767px) {
     .background {
         display: grid;
         place-items: center;
-        height: 40vh; /* Altura reduzida para dispositivos móveis */
+        height: 60vh; /* Mantenha a mesma altura */
     }
 
     .gallery {
         display: flex;
         flex-wrap: wrap;
-        gap: 10px; /* Espaçamento menor entre os cartões */
-        max-width: 100%; /* Ajuste a largura máxima para ocupar toda a largura da tela */
+        gap: 15px; /* Mesmo espaçamento entre os cartões */
+        max-width: 800px; /* Mantenha a mesma largura máxima */
         justify-content: center; /* Centralize a galeria horizontalmente */
     }
 
     .card:hover {
-        transform: scale(1.1); /* Reduzir o efeito hover para um valor menor */
+        transform: scale(1.3); /* Mantenha o mesmo efeito hover */
     }
 
     .card {
-        width: calc(50% - 10px); /* Ajustar a largura para 50% da largura da tela com um espaço de 10px entre eles */
-        border-radius: 8px; /* Bordas arredondadas para dispositivos móveis */
-        max-width: none; /* Remova a largura máxima */
-        height: auto; /* Permita que a altura seja definida pelo conteúdo */
+        position: relative;
+        left: 0px;
+        width: 100%;
+        border-radius: 16px;
+        height: 360px;
         overflow: hidden;
         background-color: var(--background);
         transition: 0.4s ease-in-out;
-        box-shadow: 0 5px 8px rgba(0, 0, 0, 0.5); /* Sombra mais suave */
+        box-shadow: 0 5px 12px rgba(0, 0, 0, 0.5);
+        flex: 0.25;
     }
 
     .card img {
-        width: 100%; /* Faça a imagem ocupar 100% da largura do cartão */
-        height: auto; /* Permita que a altura da imagem seja ajustada automaticamente */
+        height: 360px;
     }
 
     .card:hover {
-        transform: scale(1.05); /* Reduzir o efeito hover para um valor menor */
+        flex: 2;
         font-weight: bold;
         cursor: pointer;
+        border-radius: 8px;
+    }
+    h1 {
+        font-size: 24px; /* Tamanho de fonte personalizado para dispositivos móveis */
+        width: 100%;
+        text-align: center;
     }
 }
